--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "moment": "^2.29.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0"
+    "vuefire": "^2.2.5",
+    "vuetify": "^2.6.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
